@@ -6,21 +6,17 @@
 
 const char *const data[] = {"a", "b", "c"};
 
-#if 0 // TODO: Enable when bug #2629 is fixed.
 char ptrs(const char *const * ptr);
 
 void ptrs1()
 {
    ptrs(data); // False error on about incompatible types this line
 }
-#endif
 
 void testBug(void)
 {
-#if 0 // TODO: Enable when bug #2629 is fixed.
   ptrs1();
   ASSERT (ptrs(data) == 'b');
-#endif
 }
 
 char ptrs(const char *const * ptr)
